plugins {
    id 'java'
    id 'com.github.johnrengelman.shadow' version '7.0.0'
    id 'org.springframework.boot' version '3.4.4' // Add Spring Boot plugin
    id 'io.spring.dependency-management' version '1.1.4' // Add dependency management
    id "org.sonarqube" version "6.0.1.5171"
}

apply plugin: 'com.github.johnrengelman.shadow'

group 'org.example'
version '1.0-SNAPSHOT'

jar {
    manifest {
        attributes(
                'Main-Class': 'me.kmaxi.wynnvp.WynnVPBotMain'
        )
    }
}

shadowJar {
    manifest {
        attributes 'Main-Class': 'me/kmaxi/wynnvp/WynnVPBotMain'
    }
}

repositories {
    mavenCentral()
}

dependencies {
    // Spring Boot Core
    implementation 'org.springframework.boot:spring-boot-starter'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-web' // Add Spring Boot Web dependency

    // JDA (Java Discord API)
    implementation 'net.dv8tion:JDA:5.0.0-beta.20'

    // JSON handling
    implementation 'org.json:json:20231013'

    // Web scraping
    implementation 'org.jsoup:jsoup:1.15.4'

    // Lombok
    compileOnly 'org.projectlombok:lombok:1.18.30'
    annotationProcessor 'org.projectlombok:lombok:1.18.30'
}

sonar {
  properties {
    property "sonar.projectKey", "Team-VoW_VowBot"
    property "sonar.organization", "team-vow"
    property "sonar.host.url", "https://sonarcloud.io"
  }
}

//  (Spring Boot 3+ requires Java 17 or higher)
java {
    toolchain {
        languageVersion.set(JavaLanguageVersion.of(17))
    }
}
